# physical-ai-robotics

./: .dockerignore  .gitignore  404.html  PERSONALIZATION_SUMMARY.md  README.md  chatbot.html  docker-compose.yml  index.html  labs.html  markdown-page.html  personalize-content.html  personalize.html  rag-chat.html  signin.html  signup.html  sitemap.xml  translate.html
.claude/: settings.local.json
.claude/agents/: assessment_curator.md  auth_auditor.md  bom_configurator.md  chapter_composer.md  documentation_agent.md  latency_tuner.md  level_adjuster.md  qa_script_generator.md  security_enforcer.md  semantic_segmenter.md  urdu_localizer.md  vector_index_manager.md  visual_synthesizer.md
.claude/commands/: run-full-qa.md
.claude/skills/: action_sequencer.md  cicd_automation.md  docusaurus_navigator.md  e2e_test_runner.md  model_xml_tool.md  ros2_snippet_tool.md  user_profile_fetcher.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.d16c4487.css
assets/js/: 02c6793e.29792d5c.js  0357c60e.f80b10d3.js  0c827e32.c331af29.js  0e384e19.0fa824fc.js  1103b9a4.3c2cac3d.js  1217f731.2d061f40.js  1655f204.54d6d381.js  17896441.6e1394af.js  17c48ddb.4841d074.js  1f391b9e.ea01681a.js  2dcc4b91.406e1c43.js  30a8ad98.5f64448f.js  393be207.f60fa220.js  3d9a3ab1.685ad3e9.js  439499c7.78645598.js  48c2726a.ad32975a.js  48ea8175.2e4409b3.js  49bf2158.393c2f04.js  6f7d680a.57fd3b0e.js  734645bc.f3601e6d.js  7390cf63.bed5bc77.js  7392f8d9.0d9e3491.js  7ba50e4e.fdf31bf4.js  7bfbb774.8bf40d2c.js  7d4a44c3.e3b5d0e3.js  9419c978.624a2dde.js  9b010317.30ff1269.js  a6c086e1.05f7db7e.js  a915e6da.af24221e.js  b298c0d3.93ee3315.js  b46669bb.92f7f2cc.js  d33487c0.eaeccc87.js  e23f6cbf.ef04da36.js  fc05dcce.8a0a014f.js  fc316ca6.27384df1.js  main.e46cc962.js  runtime~main.392d4ad6.js
backend/: .env.example  .gitignore  Dockerfile  RAG_DEPLOYMENT.md  README.md  check_collection.py  check_service_dim.py  create_collection.py  diag_qdrant.py  final_diagnostic.py  force_seed.py  ingest_docs.py  ingest_final.py  ingest_quick.py  ingest_v5.py  ingest_v6.py  ingest_v7_3072.py  list_models.py  list_q_coll.py  main.py  pyproject.toml  requirements-render.txt  requirements.txt  rest_diag.py  robust_discovery.py  test_dim.py  test_gemini.py  test_q_conn.py  verify_config.py  verify_openai.py
backend/api/routes/: auth.py  chat.py  personalize.py  rag.py  translate.py
backend/app/: config.py
backend/app/services/: agent_service.py  embedding_service.py
backend/rag/: __init__.py  pipeline.py
backend/rag/chunking/: text_splitter.py
backend/rag/embeddings/: embedding_generator.py
backend/rag/ingestion/: document_loader.py
backend/rag/retrieval/: retriever.py
backend/rag/vectordb/: faiss_store.py
backend/scripts/: init_qdrant.py  seed_embeddings.py
backend/tests/: test_health.py
docs/: intro.html
docs/module-01-ros2/: intro.html  week-3-basics.html  week-3-nodes-topics.html  week-4-services-actions.html  week-5-complete-urdf.html  week-5-control.html  week-5-urdf.html
frontend/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
ur/: 404.html  chatbot.html  index.html  labs.html  markdown-page.html  personalize-content.html  personalize.html  rag-chat.html  signin.html  signup.html  sitemap.xml  translate.html
(+183 files in other folders)
